demo/v0.6.0/en/guidance.md
# Guidance - MII Implementation Guide Module Template v2027.0.0-template.0.6.0

* [**Table of Contents**](toc.md)
* **Guidance**

## Guidance

This section collects the domain guidance for implementing and using the **Module Template** module.

### General Implementation Guidance

* **[Datasets and Descriptions](datasets-and-descriptions.md)** — detailed description of the module's data elements / logical models.
* **[UML Diagrams](uml-diagrams.md)** — visual representation of the data models and their relationships.

### Audience-Specific Guidance

* **[Guidance for Researchers](researcher-guidance.md)** — for researchers using the module's data.
* **[Guidance for Implementers](implementer-guidance.md)** — technical guidance for DIC implementers.

> [TODO: Add the module-specific guidance that is relevant to all audiences — e.g. the domain scope or its delimitations.]

-------

For conformance requirements see [Conformance](conformance.md); for the technical artifacts see [Profiles and Extensions](profiles-and-extensions.md).

